--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="profile">
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватарка">
           <div class="profile__info">
-            <p class="profile__name">Жак-Ив Кусто<img class="profile__edit-button" src="./images/Edit Button.svg" alt="Редактировать"></p>
+            <p class="profile__name">Жак-Ив Кусто<img class="profile__edit-button" src="./images/Edit_Button.svg" alt="Редактировать"></p>
             <p class="profile__profession">Исследователь океана</p>
           </div>
           <div class="profile__add-button"></div>
@@ -81,7 +81,7 @@
   <section class="overlay">
     <div class="popup">
       <button class="popup__close-button">
-        <img class="popup__close__close-button-icon" src="./images/Close Icon.svg">
+        <img class="popup__close__close-button-icon" src="./images/Close_Icon.svg" alt="Закрыть">
       </button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <p class="popup__name">Жак-Ив Кусто</p>
