--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
       </footer>
   </div>
 
-  <section class="overlay">
+  <section class="overlay overlay__open">
     <div class="popup">
       <button class="popup__close-button">
         <img class="popup__close-button-icon" src="./images/Close_Icon.svg" alt="Закрыть">
       </button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <p class="popup__name">Жак-Ив Кусто</p>
-      <p class="popup__profession">Исследователь океана</p>
+      <input class="popup__name" type="text" placeholder="Ваше имя">
+      <input class="popup__profession" type="text" placeholder="Ваша профессия">
       <button class="popup__save-button">Сохранить</button>
     </div>
   </section>
