--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </footer>
   </div>
 
-  <section class="overlay overlay__open">
+  <section class="overlay">
     <div class="popup">
       <button class="popup__close-button">
         <img class="popup__close-button-icon" src="./images/Close_Icon.svg" alt="Закрыть">
