--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <div class="page">
       <header class="header">
         <img class="header__logo" src="./images/Vector.svg" alt="Россия">
-        <div class="header__line"></div>
       </header>
 
 
@@ -20,53 +19,53 @@
         <section class="profile">
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватарка">
           <div class="profile__info">
-            <p class="profile__name">Жак-Ив Кусто<img class="profile__edit-button" src="./images/Edit_Button.svg" alt="Редактировать"></p>
-            <p class="profile__profession">Исследователь океана</p>
+            <h1 class="profile__name">Жак-Ив Кусто<button class="profile__edit-button" type="button"></button></h1>
+            <h2 class="profile__profession">Исследователь океана</h2>
           </div>
-          <div class="profile__add-button"></div>
+          <button class="profile__add-button" type="button"></button>
         </section>
 
         <section class="elements">
           <div class="element">
             <img class="element__image" src="./images/karachaevsk1.jpg" alt="Картинка">
             <div class="element__container-bottom">
-              <h1 class="element__title">Карачаевск</h1>
-              <div class="element__like"></div>
+              <h2 class="element__title">Карачаевск</h2>
+              <button class="element__like" type="button"></button>
             </div>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elbrus1.png" alt="Картинка">
             <div class="element__container-bottom">
-              <h1 class="element__title">Гора Эльбрус</h1>
-              <div class="element__like"></div>
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__like" type="button"></button>
             </div>
           </div>
           <div class="element">
             <img class="element__image" src="./images/dombay1.png" alt="Картинка">
             <div class="element__container-bottom">
-              <h1 class="element__title">Домбай</h1>
-              <div class="element__like"></div>
+              <h2 class="element__title">Домбай</h1>
+                <button class="element__like" type="button"></button>
             </div>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elbrus2.png" alt="Картинка">
             <div class="element__container-bottom">
-              <h1 class="element__title">Гора Эльбрус</h1>
-              <div class="element__like"></div>
+              <h2 class="element__title">Гора Эльбрус</h2>
+              <button class="element__like" type="button"></button>
             </div>
           </div>
           <div class="element">
             <img class="element__image" src="./images/dombay2.png" alt="Картинка">
             <div class="element__container-bottom">
-              <h1 class="element__title">Домбай</h1>
-              <div class="element__like"></div>
+              <h2 class="element__title">Домбай</h2>
+              <button class="element__like" type="button"></button>
             </div>
           </div>
           <div class="element">
             <img class="element__image" src="./images/karachaevsk2.jpg" alt="Картинка">
             <div class="element__container-bottom">
-              <h1 class="element__title">Карачаево-Ч...</h1>
-              <div class="element__like"></div>
+              <h2 class="element__title">Карачаево-Черкесия</h2>
+              <button class="element__like" type="button"></button>
             </div>
           </div>
         </section>
@@ -76,19 +75,17 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
-  </div>
-
-  <section class="overlay">
-    <div class="popup">
-      <button class="popup__close-button">
-        <img class="popup__close-button-icon" src="./images/Close_Icon.svg" alt="Закрыть">
-      </button>
-      <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__name" type="text" placeholder="Ваше имя">
-      <input class="popup__profession" type="text" placeholder="Ваша профессия">
-      <button class="popup__save-button">Сохранить</button>
     </div>
-  </section>
+  
+  <div class="overlay overlay_open">
+    <form class="popup">
+      <button class="popup__close-button" type="button"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <input class="popup__input" type="text" name="name" placeholder="Ваше имя">
+      <input class="popup__input" type="text" name="profession" placeholder="Ваша профессия">
+      <button class="popup__save-button" type="button">Сохранить</button>
+    </form>
+  </div>
 
   <script src="./scripts/main.js"></script>
 </body>
