--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
       </footer>
     </div>
   
-  <div class="overlay overlay_open">
-    <form class="popup">
+  <div class="overlay">
+    <form class="popup" name="popupForm">
       <button class="popup__close-button" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <input class="popup__input" type="text" name="name" placeholder="Ваше имя">
       <input class="popup__input" type="text" name="profession" placeholder="Ваша профессия">
-      <button class="popup__save-button" type="button">Сохранить</button>
+      <button class="popup__save-button" type="submit">Сохранить</button>
     </form>
   </div>
 
