--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <section class="profile">
           <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватарка">
           <div class="profile__info">
-            <h1 class="profile__name">Жак-Ив Кусто<button class="profile__edit-button" type="button"></button></h1>
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
             <h2 class="profile__profession">Исследователь океана</h2>
           </div>
+          <button class="profile__edit-button" type="button"></button>
           <button class="profile__add-button" type="button"></button>
         </section>
 
