--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <section class="elements">
           <div class="element">
+            <button class="element__delete" type="button"></button>
             <img class="element__image" src="./images/karachaevsk1.jpg" alt="Картинка">
             <div class="element__container-bottom">
               <h2 class="element__title">Карачаевск</h2>
@@ -35,6 +36,7 @@
             </div>
           </div>
           <div class="element">
+            <button class="element__delete" type="button"></button>
             <img class="element__image" src="./images/elbrus1.png" alt="Картинка">
             <div class="element__container-bottom">
               <h2 class="element__title">Гора Эльбрус</h2>
@@ -42,6 +44,7 @@
             </div>
           </div>
           <div class="element">
+            <button class="element__delete" type="button"></button>
             <img class="element__image" src="./images/dombay1.png" alt="Картинка">
             <div class="element__container-bottom">
               <h2 class="element__title">Домбай</h2>
@@ -49,6 +52,7 @@
             </div>
           </div>
           <div class="element">
+            <button class="element__delete" type="button"></button>
             <img class="element__image" src="./images/elbrus2.png" alt="Картинка">
             <div class="element__container-bottom">
               <h2 class="element__title">Гора Эльбрус</h2>
@@ -56,6 +60,7 @@
             </div>
           </div>
           <div class="element">
+            <button class="element__delete" type="button"></button>
             <img class="element__image" src="./images/dombay2.png" alt="Картинка">
             <div class="element__container-bottom">
               <h2 class="element__title">Домбай</h2>
@@ -63,6 +68,7 @@
             </div>
           </div>
           <div class="element">
+            <button class="element__delete" type="button"></button>
             <img class="element__image" src="./images/karachaevsk2.jpg" alt="Картинка">
             <div class="element__container-bottom">
               <h2 class="element__title">Карачаево-Черкесия</h2>
@@ -85,6 +91,16 @@
       <input class="popup__input" type="text" name="name" placeholder="Ваше имя">
       <input class="popup__input" type="text" name="profession" placeholder="Ваша профессия">
       <button class="popup__save-button" type="submit">Сохранить</button>
+    </form>
+  </div>
+
+  <div class="place-overlay place-overlay_open">
+    <form class="place" name="placeForm">
+      <button class="place__close-button" type="button"></button>
+      <h2 class="place__title">Новое место</h2>
+      <input class="place__input" type="text" name="placeName" placeholder="Название">
+      <input class="place__input" type="text" name="placeUrl" placeholder="Ссылка на картинку">
+      <button class="place__add-button" type="button">Создать</button>
     </form>
   </div>
 
