--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </form>
   </div>
 
-  <div class="place-overlay place-overlay_open">
+  <div class="place-overlay">
     <form class="place" name="placeForm">
       <button class="place__close-button" type="button"></button>
       <h2 class="place__title">Новое место</h2>
