--- a/index.html
+++ b/index.html
@@ -26,61 +26,14 @@
           <button class="profile__add-button" type="button"></button>
         </section>
 
-        <section class="elements">
-          <div class="element">
-            <button class="element__delete" type="button"></button>
-            <img class="element__image" src="./images/karachaevsk1.jpg" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Карачаевск</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <button class="element__delete" type="button"></button>
-            <img class="element__image" src="./images/elbrus1.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <button class="element__delete" type="button"></button>
-            <img class="element__image" src="./images/dombay1.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Домбай</h2>
-                <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <button class="element__delete" type="button"></button>
-            <img class="element__image" src="./images/elbrus2.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <button class="element__delete" type="button"></button>
-            <img class="element__image" src="./images/dombay2.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Домбай</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <button class="element__delete" type="button"></button>
-            <img class="element__image" src="./images/karachaevsk2.jpg" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
+        <section class="elements" id="elements">
+          
         </section>
       </main>
 
 
       <footer class="footer">
-        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+        <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
     </div>
   
@@ -100,7 +53,7 @@
       <h2 class="place__title">Новое место</h2>
       <input class="place__input" type="text" name="placeName" placeholder="Название">
       <input class="place__input" type="text" name="placeUrl" placeholder="Ссылка на картинку">
-      <button class="place__add-button" type="button">Создать</button>
+      <button class="place__add-button" type="submit">Создать</button>
     </form>
   </div>
 
