--- a/index.html
+++ b/index.html
@@ -27,54 +27,12 @@
         </section>
 
         <section class="elements">
-          <div class="element">
-            <img class="element__image" src="./images/karachaevsk1.jpg" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Карачаевск</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/elbrus1.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/dombay1.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Домбай</h2>
-                <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/elbrus2.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/dombay2.png" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Домбай</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img class="element__image" src="./images/karachaevsk2.jpg" alt="Картинка">
-            <div class="element__container-bottom">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
+          
         </section>
       </main>
 
-
       <footer class="footer">
-        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+        <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
     </div>
   
@@ -87,6 +45,35 @@
       <button class="popup__save-button" type="submit">Сохранить</button>
     </form>
   </div>
+
+  <div class="place-overlay">
+    <form class="place" name="placeForm">
+      <button class="place__close-button" type="button"></button>
+      <h2 class="place__title">Новое место</h2>
+      <input class="place__input" type="text" name="placeName" placeholder="Название">
+      <input class="place__input" type="text" name="placeUrl" placeholder="Ссылка на картинку">
+      <button class="place__add-button" type="submit">Создать</button>
+    </form>
+  </div>
+
+  <div class="img-overlay">
+    <form class="img-form" name="imgForm">
+      <button class="img-form__close-button" type="button"></button>
+      <img class="img-form__picture" alt="Здесь должна была быть картинка">
+      <h2 class="img-form__title" ></h2>
+    </form>
+  </div>
+
+  <template class="placeTemplate">
+    <div class="element">
+      <button class="element__delete" type="button"></button>
+      <img class="element__image" alt="Картинка" type="button">
+      <div class="element__container-bottom">
+          <h2 class="element__title"></h2>
+          <button class="element__like" type="button"></button>
+      </div>
+    </div>
+  </template>
 
   <script src="./scripts/main.js"></script>
 </body>
