ne rabotaet dobavlenir kartochki

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h2 class="place__title">Новое место</h2>
       <input class="place__input" type="text" name="placeName" placeholder="Название">
       <input class="place__input" type="text" name="placeUrl" placeholder="Ссылка на картинку">
-      <button class="place__add-button" type="submit">Создать</button>
+      <button class="place__add-button" type="button">Создать</button>
     </form>
   </div>
 
