--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </footer>
     </div>
   
-  <div class="overlay">
+  <div class="overlay overlay_popup">
     <form class="popup" name="popupForm">
       <button class="popup__close-button" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
@@ -46,7 +46,7 @@
     </form>
   </div>
 
-  <div class="place-overlay">
+  <div class="overlay overlay_place">
     <form class="place" name="placeForm">
       <button class="place__close-button" type="button"></button>
       <h2 class="place__title">Новое место</h2>
@@ -56,7 +56,7 @@
     </form>
   </div>
 
-  <div class="img-overlay">
+  <div class="overlay overlay_img">
     <form class="img-form" name="imgForm">
       <button class="img-form__close-button" type="button"></button>
       <img class="img-form__picture" alt="Здесь должна была быть картинка">
