--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <form class="popup" name="popupForm">
       <button class="popup__close-button" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__input" type="text" name="name" placeholder="Ваше имя">
-      <input class="popup__input" type="text" name="profession" placeholder="Ваша профессия">
+      <input class="popup__input" type="text" name="name" placeholder="Ваше имя" required>
+      <span class="popup__error" id="errorUserName"></span>
+      <input class="popup__input" type="text" name="profession" placeholder="Ваша профессия" required>
+      <span class="popup__error" id="errorProfName"></span>
       <button class="popup__save-button" type="submit">Сохранить</button>
     </form>
   </div>
@@ -50,8 +52,10 @@
     <form class="place" name="placeForm">
       <button class="place__close-button" type="button"></button>
       <h2 class="place__title">Новое место</h2>
-      <input class="place__input" type="text" name="placeName" placeholder="Название">
-      <input class="place__input" type="text" name="placeUrl" placeholder="Ссылка на картинку">
+      <input class="place__input" type="text" name="placeName" placeholder="Название" required>
+      <span class="popup__error" id="errorPlaceName"></span>
+      <input class="place__input" type="url" name="placeUrl" placeholder="Ссылка на картинку" required>
+      <span class="popup__error" id="errorPlaceUrl"></span>
       <button class="place__add-button" type="submit">Создать</button>
     </form>
   </div>
@@ -76,5 +80,6 @@
   </template>
 
   <script src="./scripts/main.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 </html>
