--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <button class="place__close-button" type="button"></button>
       <h2 class="place__title">Новое место</h2>
       <input class="place__input" type="text" name="placeName" placeholder="Название" required>
-      <span class="popup__error error" id="errorPlaceName"></span>
+      <span class="place__error error" id="errorPlaceName"></span>
       <input class="place__input" type="url" name="placeUrl" placeholder="Ссылка на картинку" required>
-      <span class="popup__error error" id="errorPlaceUrl"></span>
+      <span class="place__error error" id="errorPlaceUrl"></span>
       <button class="place__add-button" type="submit">Создать</button>
     </form>
   </div>
