--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
   <div class="overlay overlay_open overlay_popup">
     <form class="popup popup__form" name="popupForm">
-      <fieldset class="form__set">
+      <fieldset class="popup__set form__set">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
       
@@ -55,7 +55,7 @@
 
   <div class="overlay overlay_place">
     <form class="popup place popup__form" name="placeForm">
-      <fieldset class="form__set">
+      <fieldset class="popup__set form__set">
         <button class="place__close-button button" type="button"></button>
         <h2 class="place__title">Новое место</h2>
       
