--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </footer>
     </div>
   
-  <div class="overlay overlay_open overlay_popup">
+  <div class="overlay overlay_popup">
     <form class="popup popup__form" name="popupForm">
       <fieldset class="popup__set form__set">
         <button class="popup__close-button" type="button"></button>
@@ -55,7 +55,7 @@
 
   <div class="overlay overlay_place">
     <form class="popup place popup__form" name="placeForm">
-      <fieldset class="popup__set form__set">
+      <fieldset class="popup__set">
         <button class="place__close-button button" type="button"></button>
         <h2 class="place__title">Новое место</h2>
       
