--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
   <div class="overlay overlay_popup">
     <form class="popup popup__form" name="popupForm">
-      <fieldset class="popup__set form__set">
+      <fieldset class="popup__set">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
       
