--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   
   <div class="overlay overlay_popup">
-    <form class="popup popup__form" name="popupForm">
+    <form class="popup popup_form" name="popupForm">
       <fieldset class="popup__set">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -54,7 +54,7 @@
   </div>
 
   <div class="overlay overlay_place">
-    <form class="popup place popup__form" name="placeForm">
+    <form class="popup place popup_form" name="placeForm">
       <fieldset class="popup__set">
         <button class="place__close-button button" type="button"></button>
         <h2 class="place__title">Новое место</h2>
