--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="overlay overlay_popup">
     <form class="popup popup_form" name="popupForm">
       <fieldset class="popup__set">
-        <button class="popup__close-button" type="button"></button>
+        <button class="popup__close-button overlay__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
       
         <input id="popupUserName" class="popup__input" type="text" name="name" placeholder="Ваше имя" required minlength="2" maxlength="40">
@@ -56,7 +56,7 @@
   <div class="overlay overlay_place">
     <form class="popup place popup_form" name="placeForm">
       <fieldset class="popup__set">
-        <button class="place__close-button button" type="button"></button>
+        <button class="place__close-button button overlay__close" type="button"></button>
         <h2 class="place__title">Новое место</h2>
       
         <input id="placeName" class="popup__input place__input" type="text" name="placeName" placeholder="Название" required minlength="2" maxlength="30">
@@ -72,7 +72,7 @@
 
   <div class="overlay overlay_img">
     <form class="img-form" name="imgForm">
-      <button class="img-form__close-button button" type="button"></button>
+      <button class="img-form__close-button overlay__close" type="button"></button>
       <img class="img-form__picture" alt="Здесь должна была быть картинка">
       <h2 class="img-form__title" ></h2>
     </form>
