--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </form>
   </div>
 
-  <template class="placeTemplate">
+  <template class="placeTemplate" id="placeCardTemplate">
     <div class="element">
       <button class="element__delete button" type="button"></button>
       <img class="element__image" alt="Картинка" type="button">
@@ -89,7 +89,9 @@
     </div>
   </template>
 
-  <script src="./scripts/main.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/validate.js"></script>
 </body>
 </html>
