--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <div class="overlay overlay_popup">
-    <form class="popup popup_form" name="popupForm">
+    <form class="popup profileForm popup_form" name="popupForm">
       <fieldset class="popup__set">
         <button class="popup__close-button overlay__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
