--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
-
 
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/Vector.svg" alt="Россия">
+      <img class="header__logo" src="<%=require('./images/Vector.svg')%>" alt="Россия">
     </header>
-
 
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватарка">
+        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватарка">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <h2 class="profile__profession">Исследователь океана</h2>
@@ -43,15 +40,15 @@
         <button class="popup__close-button overlay__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
 
-        <input id="popupUserName" class="popup__input" type="text" name="name" placeholder="Ваше имя" required
+        <input id="popupUserName" class="popup__input popup__input_one" type="text" name="name" placeholder="Ваше имя" required
           minlength="2" maxlength="40">
         <span class="popup__input-error popupUserName-error" id="errorUserName"></span>
 
-        <input id="popupProfName" class="popup__input" type="text" name="profession" placeholder="Ваша профессия"
+        <input id="popupProfName" class="popup__input popup__input_two" type="text" name="profession" placeholder="Ваша профессия"
           required minlength="2" maxlength="200">
         <span class="popup__input-error popupProfName-error" id="errorProfName"></span>
 
-        <button class="popup__save-button popup__button" type="submit">Сохранить</button>
+        <button class="popup__save-button popup__button popup__submit" type="submit">Сохранить</button>
       </fieldset>
     </form>
   </div>
@@ -62,15 +59,15 @@
         <button class="place__close-button button overlay__close" type="button"></button>
         <h2 class="place__title">Новое место</h2>
 
-        <input id="placeName" class="popup__input place__input" type="text" name="placeName" placeholder="Название"
+        <input id="placeName" class="popup__input popup__input_one place__input" type="text" name="placeName" placeholder="Название"
           required minlength="2" maxlength="30">
         <span class="popup__input-error placeName-error" id="errorPlaceName"></span>
 
-        <input id="placeUrl" class="popup__input place__input" type="url" name="placeUrl"
+        <input id="placeUrl" class="popup__input popup__input_two place__input" type="url" name="placeUrl"
           placeholder="Ссылка на картинку" required>
         <span class="popup__input-error placeUrl-error" id="errorPlaceUrl"></span>
 
-        <button class="place__add-button popup__button" type="submit">Создать</button>
+        <button class="place__add-button popup__button popup__submit" type="submit">Создать</button>
       </fieldset>
     </form>
   </div>
@@ -94,10 +91,7 @@
     </div>
   </template>
 
-  <script type="module" src="./scripts/index.js"></script>
-  <script type="module" src="./scripts/Card.js"></script>
-  <script type="module" src="./scripts/FormValidator.js"></script>
-  <script type="module" src="./scripts/validate.js"></script>
+
 </body>
 
 </html>
