--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="<%=require('./images/Vector.svg')%>" alt="Россия">
+      <img class="header__logo" src="./images/Vector.svg" alt="Россия">
     </header>
 
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватарка">
+        <div class="profile__avatar">
+          <img class="profile__avatar__pen" src="./images/Vector.png" alt="Ручка">
+        </div>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <h2 class="profile__profession">Исследователь океана</h2>
+          <h1 class="profile__name"></h1>
+          <h2 class="profile__profession"></h2>
         </div>
         <button class="profile__edit-button" type="button"></button>
         <button class="profile__add-button" type="button"></button>
@@ -40,12 +43,12 @@
         <button class="popup__close-button overlay__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
 
-        <input id="popupUserName" class="popup__input popup__input_one" type="text" name="name" placeholder="Ваше имя" required
-          minlength="2" maxlength="40">
+        <input id="popupUserName" class="popup__input popup__input_one" type="text" name="name" placeholder="Ваше имя"
+          required minlength="2" maxlength="40">
         <span class="popup__input-error popupUserName-error" id="errorUserName"></span>
 
-        <input id="popupProfName" class="popup__input popup__input_two" type="text" name="profession" placeholder="Ваша профессия"
-          required minlength="2" maxlength="200">
+        <input id="popupProfName" class="popup__input popup__input_two" type="text" name="profession"
+          placeholder="Ваша профессия" required minlength="2" maxlength="200">
         <span class="popup__input-error popupProfName-error" id="errorProfName"></span>
 
         <button class="popup__save-button popup__button popup__submit" type="submit">Сохранить</button>
@@ -59,15 +62,40 @@
         <button class="place__close-button button overlay__close" type="button"></button>
         <h2 class="place__title">Новое место</h2>
 
-        <input id="placeName" class="popup__input popup__input_one place__input" type="text" name="placeName" placeholder="Название"
-          required minlength="2" maxlength="30">
+        <input id="placeName" class="popup__input popup__input_one place__input" type="text" name="placeName"
+          placeholder="Название" required minlength="2" maxlength="30">
         <span class="popup__input-error placeName-error" id="errorPlaceName"></span>
 
         <input id="placeUrl" class="popup__input popup__input_two place__input" type="url" name="placeUrl"
           placeholder="Ссылка на картинку" required>
         <span class="popup__input-error placeUrl-error" id="errorPlaceUrl"></span>
 
-        <button class="place__add-button popup__button popup__submit" type="submit">Создать</button>
+        <button class="place__add-button popup__button popup__submit" type="submit">Сохранить</button>
+      </fieldset>
+    </form>
+  </div>
+
+  <div class="overlay overlay_ask">
+    <form class="ask ask_form" name="askForm">
+      <fieldset class="ask__set popup__set">
+        <button class="ask__close-button button overlay__close popup__close-button" type="button"></button>
+        <h2 class="ask__title popup__title">Вы уверены?</h2>
+        <button class="ask__button popup__save-button popup__button popup__submit" type="submit">Да</button>
+      </fieldset>
+    </form>
+  </div>
+
+  <div class="overlay overlay_avatar">
+    <form class="avatar avatar_form" name="avatarForm">
+      <fieldset class="avatar__set popup__set">
+        <button class="avatar__close-button button overlay__close popup__close-button" type="button"></button>
+        <h2 class="avatar__title popup__title">Обновить аватар</h2>
+
+        <input id="avatarUrl" class="popup__input avatar__input" type="url" name="avatarUrl"
+          placeholder="Ссылка на картинку" required>
+          <span class="popup__input-error avatarUrl-error" id="errorAvatarUrl"></span>
+
+        <button class="avatar__button popup__save-button popup__button popup__submit" type="submit">Сохранить</button>
       </fieldset>
     </form>
   </div>
@@ -80,6 +108,8 @@
     </form>
   </div>
 
+
+
   <template class="placeTemplate" id="placeCardTemplate">
     <div class="element">
       <button class="element__delete button" type="button"></button>
@@ -87,11 +117,21 @@
       <div class="element__container-bottom">
         <h2 class="element__title"></h2>
         <button class="element__like" type="button"></button>
+        <h3 class="element__number">0</h3>
       </div>
     </div>
   </template>
 
-
+  <script type="module" src="./pages/index.js"></script>
+  <script type="module" src="./components/Card.js"></script>
+  <script type="module" src="./components/FormValidator.js"></script>
+  <script type="module" src="./components/Popup.js"></script>
+  <script type="module" src="./components/PopupWithForm.js"></script>
+  <script type="module" src="./components/PopupWithImage.js"></script>
+  <script type="module" src="./components/PopupWithAsk.js"></script>
+  <script type="module" src="./components/PopupWithAvatar.js"></script>
+  <script type="module" src="./components/Section.js"></script>
+  <script type="module" src="./components/UserInfo.js"></script>
 </body>
 
 </html>
