--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/Vector.svg" alt="Россия">
+      <img class="header__logo" src="<%=require('./images/Vector.svg')%>" alt="Россия">
     </header>
 
     <main class="content">
       <section class="profile">
         <div class="profile__avatar">
-          <img class="profile__avatar__pen" src="./images/Vector.png" alt="Ручка">
+          <img class="profile__avatar__pen" src="<%=require('./images/Vector.png')%>" alt="Ручка">
         </div>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
@@ -109,7 +108,6 @@
   </div>
 
 
-
   <template class="placeTemplate" id="placeCardTemplate">
     <div class="element">
       <button class="element__delete button" type="button"></button>
@@ -122,16 +120,6 @@
     </div>
   </template>
 
-  <script type="module" src="./pages/index.js"></script>
-  <script type="module" src="./components/Card.js"></script>
-  <script type="module" src="./components/FormValidator.js"></script>
-  <script type="module" src="./components/Popup.js"></script>
-  <script type="module" src="./components/PopupWithForm.js"></script>
-  <script type="module" src="./components/PopupWithImage.js"></script>
-  <script type="module" src="./components/PopupWithAsk.js"></script>
-  <script type="module" src="./components/PopupWithAvatar.js"></script>
-  <script type="module" src="./components/Section.js"></script>
-  <script type="module" src="./components/UserInfo.js"></script>
 </body>
 
 </html>
