--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar">
-          <img class="profile__avatar_pen" src="<%=require('./images/Vector.png')%>" alt="Ручка">
+          <img class="profile__avatar-pen" src="<%=require('./images/Vector.png')%>" alt="Ручка">
         </div>
         <div class="profile__info">
           <h1 class="profile__name"></h1>
