--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="overlay overlay_ask">
-    <form class="ask ask_form" name="askForm">
+    <form class="popup ask ask_form" name="askForm">
       <fieldset class="ask__set popup__set">
         <button class="ask__close-button button overlay__close popup__close-button" type="button"></button>
         <h2 class="ask__title popup__title">Вы уверены?</h2>
@@ -85,7 +85,7 @@
   </div>
 
   <div class="overlay overlay_avatar">
-    <form class="avatar avatar_form" name="avatarForm">
+    <form class="popup avatar avatar_form" name="avatarForm">
       <fieldset class="avatar__set popup__set">
         <button class="avatar__close-button button overlay__close popup__close-button" type="button"></button>
         <h2 class="avatar__title popup__title">Обновить аватар</h2>
